src/test/resources/testinput/parsable/symtab/invalid_coco/transitiveclosure4.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl transitiveclosure4 {
  context Person inv Transitiv:
    this.ancestors == this.parents**;
}
